<resources>
    <string name="add_categories">Choose Categories</string>
    <string name="add_deployment">Add Deployment</string>
    <string name="add_incident">Add Report</string>
    <string name="add_location">Add a location</string>
    <string name="advanced_settings">Advanced settings</string>
    <string name="alert_dialog_error_title">Oops</string>
    <string name="all_categories">All</string>
    <string name="app_name">Ushahidi</string>
    <string name="app_settings">Settings</string>
    <string name="basic_settings">Basic settings</string>
    <string name="bg_notification">Background Notifications</string>
    <string name="btn_add_photo">Add Photo</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_confirm">Save</string>
    <string name="btn_country">Default location</string>
    <string name="btn_find">Find me</string>
    <string name="btn_ok">Ok</string>
    <string name="btn_reset">Reset</string>
    <string name="btn_save">Save</string>
    <string name="btn_send">Send</string>
    <string name="camera_option">Camera</string>
    <string name="change_photo">Change Photo</string>
    <string name="checkin_btn">Check In</string>
    <string name="checkin_contact">Contact Info</string>
    <string name="checkin_empty_message">Please enter a check in message.</string>
    <string name="checkin_enter_email_hint">Enter email</string>
    <string name="checkin_enter_firstname_hint">Enter first name</string>
    <string name="checkin_enter_lastname_hint">Enter last name</string>
    <string name="checkin_enter_msg_hint">Enter message</string>
    <string name="checkin_error_toast">Error encountered during check in</string>
    <string name="checkin_how_to_select_pic">Please choose how you would like to get the picture.</string>
    <string name="checkin_in_progress">Sending Check-in...</string>
    <string name="checkin_list">View Check In</string>
    <string name="checkin_message">Message</string>
    <string name="checkin_no_location">Could not get your location. If you are using the GPS feature of the phone make sure the phone can see the sky. If the phone cannot see the sky, turn of the GPS to make use of your network providers cell towers for location.</string>
    <string name="checkin_progress_message">Getting location data...</string>
    <string name="checkin_progress_title">Working</string>
    <string name="checkin_select_pic_file">File</string>
    <string name="checkin_selected_photo">Selected photo</string>
    <string name="checkin_success_toast">Check in successful</string>
    <string name="checkins_successfully_fetched">Checkins successfully fetched.</string>
    <string name="chk_auto_fetch">Auto sync</string>
    <string name="choose_method">Choose Method</string>
    <string name="clear_all">Clear all</string>
    <string name="confirm_clear">Are you sure you want to clear everything?</string>
    <string name="could_not_fetch_checkin">Could not fetch check ins.</string>
    <string name="could_not_fetch_data">"Couldn't fetch new deployments due to network error."</string>
    <string name="could_not_fetch_reports">Could not fetch reports.</string>
    <string name="curr_location">Current location</string>
    <string name="delete">Delete</string>
    <string name="deployment_deleted">Deployment deleted</string>
    <string name="deployment_deleted_failed">Failed to delete</string>
    <string name="deployment_fetched_successful">Deployments successfully fetched</string>
    <string name="deploymet_url">Deployment URL</string>
    <string name="empty_checkins">No check ins</string>
    <string name="empty_deployments">No deployments</string>
    <string name="empty_report_categories">Select at least one category.</string>
    <string name="empty_report_description">Enter a description for the report.</string>
    <string name="empty_report_location">The location name field is required.</string>
    <string name="empty_report_title">Enter a title for the report.</string>
    <string name="empty_reports">No reports</string>
    <string name="failed_to_add_report_offline">Failed to send report.Check to see if you filled all required fields.</string>
    <string name="failed_to_add_report_online">Connection failure, cannot submit your report. Probably you are on a slow connection.</string>
    <string name="fetching_new_reports">Fetching new reports</string>
    <string name="file_system_error">File System Error</string>
    <string name="file_system_error_msg">File System Error, please ensure your save path is correct!</string>
    <string name="find_location">Finding you...</string>
    <string name="fix_error">Please make sure a name and a valid URL are entered.</string>
    <string name="flash_led">Flashing LED</string>
    <string name="gallery_option">Gallery</string>
    <string name="hint_SD_save_path">Type a folder name</string>
    <string name="hint_advanced_settings">For more advanced settings</string>
    <string name="hint_auto_fetch">Ushahidi will automatically download new reports.</string>
    <string name="hint_auto_update_delay">Set how often Ushahidi syncronizes with the selected deployment.</string>
    <string name="hint_clear_cache">Clear all stored data.</string>
    <string name="hint_domain">Select the Ushahidi deployment that you wish to interact with.</string>
    <string name="hint_email">For contact purposes only.</string>
    <string name="hint_first_name">For attribution when submitting a report (optional).</string>
    <string name="hint_flash_led">"Cause phone's LED to flash"</string>
    <string name="hint_last_name">Also for attribution when submitting a report (optional).</string>
    <string name="hint_location">Location here</string>
    <string name="hint_option_location">The location where you want to store items saved from the selected deployment.</string>
    <string name="hint_ringtone">Play a ringtone</string>
    <string name="hint_select_ringtone">Change which ringtone to use</string>
    <string name="hint_total_reports">The total number of reports to fetch from the selected deployment.</string>
    <string name="hint_vibrate">Will cause phone to vibrate</string>
    <string name="how_to_select_pic">Please choose how you would like to get the picture.</string>
    <string name="incident_add_category">Select Category</string>
    <string name="incident_date">Change the date</string>
    <string name="incident_description">Description:</string>
    <string name="incident_details">Report Detail</string>
    <string name="incident_list">View Reports</string>
    <string name="incident_location">Location:</string>
    <string name="incident_menu_add">Add Report</string>
    <string name="incident_menu_map">View Map</string>
    <string name="incident_menu_refresh">Refresh</string>
    <string name="incident_time">Change the time</string>
    <string name="incident_title">Title:</string>
    <string name="incident_unverified">Unverified</string>
    <string name="incident_verified">Verified</string>
    <string name="instructions">Tap your location on the map</string>
    <string name="internet_connection">Network error, please ensure you are connected to the Internet</string>
    <string name="invalid_email_address">An invalid email address was entered</string>
    <string name="invalid_ushahidi_instance">Looks like the URL entered is not an Ushahidi deployment.</string>
    <string name="items_cleared">Everything was successfully cleared</string>
    <string name="loading">Loading...</string>
    <string name="loc_not_found">Your location could not be determined. Make sure you have pin point the exact location on the map.</string>
    <string name="location_not_found">A location can not currently be determined. Enable more location sources i.e. GPS Satellites in Security and Location Settings.</string>
    <string name="menu_about">About</string>
    <string name="menu_home">Home</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_sync">Sync</string>
    <string name="minutes">Minutes</string>
    <string name="network_error">Network Error</string>
    <string name="network_error_msg">Network Error, please ensure you are connected to the Internet</string>
    <string name="no_categories">Could not fetch categories.</string>
    <string name="no_items_cleared">No items to clear</string>
    <string name="no_name">No name</string>
    <string name="no_reports">There are no reports to be shown</string>
    <string name="no_results">No results found for \"%s\"</string>
    <string name="notification_expanded_message">Reports Sent Successfully</string>
    <string name="notification_expanded_title">Ushahidi Report</string>
    <string name="notification_status_bar_message">Report Sent</string>
    <string name="on_phone">On Phone</string>
    <string name="on_sd_card">On SD Card</string>
    <string name="option_location">Default folder</string>
    <string name="please_wait">Please wait...</string>
    <string name="preferences_notifications">Notifications</string>
    <string name="preview_photo">Photo</string>
    <string name="prompt_mesg">Choose A Category to Filter</string>
    <string name="pull_to_refresh_pull_label">Pull to refresh...</string>
    <string name="pull_to_refresh_refreshing_label">Loading...</string>
    <string name="pull_to_refresh_release_label">Release to refresh...</string>
    <string name="pull_to_refresh_tap_label">Tap to refresh...</string>
    <string name="read_more">Read more...</string>
    <string name="recent_reports">Recent Reports</string>
    <string name="report_category">Category</string>
    <string name="report_date">Date</string>
    <string name="report_desc">Description</string>
    <string name="report_location">Location</string>
    <string name="report_photo">Photo</string>
    <string name="report_successfully_added_offline">Report sent to local storage due to unavailability of Internet. Remember to sync to the online instance when there there is Internet connection.</string>
    <string name="report_successfully_added_online">Report successfully posted online and entered into a moderation queue</string>
    <string name="report_title">Title</string>
    <string name="report_unverified">Unverified</string>
    <string name="report_verified">Verified</string>
    <string name="reports">Reports</string>
    <string name="reports_successfully_fetched">Reports successfully fetched.</string>
    <string name="ringtone">Ringtone</string>
    <string name="search_hint">Type here to filter the list below...</string>
    <string name="search_label">Search</string>
    <string name="select_distance">Select distance in km</string>
    <string name="select_ringtone">Select Ringtone</string>
    <string name="sending_report_in_progress">Sending report...</string>
    <string name="settings_description">Found deployments</string>
    <string name="share_template">Check out %1$s at %2$s</string>
    <string name="status_no">No</string>
    <string name="status_yes">Yes</string>
    <string name="str_post_photos">Add a Photo</string>
    <string name="tab_item_checkin">Check Ins</string>
    <string name="tab_item_report_list">List</string>
    <string name="tab_item_report_map">Map</string>
    <string name="title_share">Share using</string>
    <string name="total_reports">Number of reports</string>
    <string name="txt_auto_update_delay">Auto sync frequency</string>
    <string name="txt_cache">Cache files:</string>
    <string name="txt_clear_cache">Clear cache</string>
    <string name="txt_countries">Select a default country</string>
    <string name="txt_domain">Choose your website</string>
    <string name="txt_email">E-mail address</string>
    <string name="txt_first_name">First name</string>
    <string name="txt_last_name">Last name</string>
    <string name="txt_path_SD">Path on SD:</string>
    <string name="google_map_api_key">02cv5Q8Rob0CKZ9PP72gMQ10QuVVFv8q4zZ91yA</string>
</resources>