<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/background_color" android:padding="10.0px" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:scrollbars="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textColor="@drawable/date_color" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/txt_domain" />
                <EditText android:id="@id/domain" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/hint_domain" android:layout_weight="1.0" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textColor="@drawable/date_color" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/txt_first_name" />
                <EditText android:id="@id/firstname" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textColor="@drawable/date_color" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/txt_last_name" />
                <EditText android:id="@id/lastname" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textColor="@drawable/date_color" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/txt_email" />
                <EditText android:id="@id/email" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/hint_email" android:layout_weight="1.0" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textColor="@drawable/date_color" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/txt_countries" />
                <Spinner android:id="@id/spn_countries" android:layout_width="fill_parent" android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textColor="@drawable/date_color" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/txt_cache" />
                <Button android:id="@id/btn_cache" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/txt_clear_cache" />
            </LinearLayout>
            <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                <RadioGroup android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <RadioButton android:textColor="@drawable/date_color" android:id="@id/rb_on_phone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hint_option_location" />
                    <RadioButton android:textColor="@drawable/date_color" android:id="@id/rb_on_SD" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hint_option_location" />
                </RadioGroup>
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:id="@id/ll_on_sd" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textColor="@drawable/date_color" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/txt_path_SD" />
                <EditText android:id="@id/et_sd_save_path" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/hint_SD_save_path" />
            </LinearLayout>
            <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textColor="@drawable/date_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/txt_auto_update_delay" />
                <Spinner android:id="@id/spn_auto_update_delay" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            </LinearLayout>
            <CheckBox android:textColor="@drawable/date_color" android:id="@id/chk_auto_fetch" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/chk_auto_fetch" />
            <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                <Button android:textStyle="bold" android:id="@id/btn_cancel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/btn_cancel" />
                <Button android:textStyle="bold" android:id="@id/btn_confirm" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/btn_confirm" android:layout_alignParentRight="true" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>