<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/db1_root" android:background="@drawable/dashboard_background" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout style="@style/ActionBarTitleContainer">
        <ImageButton android:src="@drawable/ushahidi_icon" android:contentDescription="@string/menu_home" style="@style/ActionBarTitle" />
        <TextView style="@style/ActionBarTitleText" />
        <ImageView style="@style/ActionBarTitleSeparator" />
        <ImageButton android:id="@id/refresh_report_btn" android:src="@drawable/refresh_icon" android:onClick="onRefreshReports" style="@style/ActionBarTitle" />
        <ProgressBar android:id="@id/title_refresh_progress" android:visibility="gone" style="@style/TitleBarProgressIndicator" />
        <ImageView style="@style/ActionBarTitleSeparator" />
        <ImageButton android:id="@id/add_btn" android:src="@drawable/actionbar_add" android:onClick="onAddReport" style="@style/ActionBarTitle" />
    </LinearLayout>
    <ImageView style="@style/ActionBarSeparator" />
    <LinearLayout android:orientation="vertical" android:padding="6.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="10.0">
            <Button android:id="@id/checkin_list_btn" android:text="@string/checkin_list" android:drawableTop="@drawable/dashboard_btn_checkin" style="@style/DashboardButton" />
            <Button android:id="@id/incident_list" android:text="@string/incident_list" android:drawableTop="@drawable/dashboard_btn_list" style="@style/DashboardButton" />
            <Button android:id="@id/incident_add" android:visibility="gone" android:text="@string/incident_menu_add" android:drawableTop="@drawable/dashboard_btn_add" style="@style/DashboardButton" />
            <Button android:id="@id/checkin_add_btn" android:visibility="gone" android:text="@string/checkin_btn" android:drawableTop="@drawable/dashboard_btn_add_checkin" style="@style/DashboardButton" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
            <Button android:id="@id/incident_map" android:text="@string/incident_menu_map" android:drawableTop="@drawable/dashboard_btn_map" style="@style/DashboardButton" />
            <Button android:id="@id/deployment_search" android:text="@string/search_label" android:drawableTop="@drawable/dashboard_btn_search" android:onClick="onClickFeature" style="@style/DashboardButton" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="15.0">
            <Button android:id="@id/deployment_about" android:text="@string/menu_about" android:drawableTop="@drawable/dashboard_btn_about" android:onClick="onClickFeature" style="@style/DashboardButton" />
            <Button android:id="@id/deployment_settings" android:text="@string/menu_settings" android:drawableTop="@drawable/dashboard_btn_settings" android:onClick="onClickFeature" style="@style/DashboardButton" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>