<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/background_color" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout style="@style/ActionBarTitleContainer">
        <ImageButton android:src="@drawable/ushahidi_icon" android:onClick="onClickHome" android:contentDescription="@string/menu_home" style="@style/ActionBarTitle" />
        <ImageView style="@style/ActionBarTitleSeparator" />
        <TextView style="@style/ActionBarTitleText" />
        <ImageButton android:id="@id/search_report_btn" android:visibility="gone" android:src="@drawable/ic_title_search" android:onClick="onSearchDeployments" style="@style/ActionBarTitle" />
        <Button android:id="@id/incident_add_btn" android:text="@string/btn_send" style="@style/ActionbarActionButton" />
    </LinearLayout>
    <ImageView style="@style/ActionBarSeparator" />
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <LinearLayout android:orientation="vertical" android:paddingBottom="15.0px" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textStyle="bold" android:textColor="@drawable/title_color" android:id="@id/lbl_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/incident_title" />
                <EditText android:id="@id/incident_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:capitalize="words" android:autoText="true" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:paddingBottom="15.0px" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textStyle="bold" android:textColor="@drawable/title_color" android:id="@id/lbl_date" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                <LinearLayout android:orientation="horizontal" android:paddingBottom="15.0px" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <Button android:textStyle="bold" android:id="@id/pick_date" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/incident_date" />
                    <Button android:textStyle="bold" android:id="@id/pick_time" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/incident_time" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:paddingBottom="15.0px" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textStyle="bold" android:textColor="@drawable/title_color" android:id="@id/incident_loc" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/incident_location" />
                <EditText android:id="@id/incident_location" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/hint_location" android:capitalize="words" android:autoText="true" />
                <com.google.android.maps.MapView android:enabled="true" android:id="@id/location_map" android:clickable="true" android:layout_width="fill_parent" android:layout_height="300.0dip" android:apiKey="@string/google_map_api_key" />
                <TextView android:textStyle="bold" android:textColor="@drawable/title_color" android:gravity="center_horizontal" android:id="@id/latlon" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:padding="15.0px" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <Button android:textStyle="bold" android:id="@id/add_category" android:paddingLeft="15.0px" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/incident_add_category" />
                <TextView android:textStyle="bold" android:textColor="@drawable/title_color" android:id="@id/lbl_category" android:layout_width="fill_parent" android:layout_height="wrap_content" android:singleLine="false" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:paddingBottom="15.0px" android:layout_width="fill_parent" android:layout_height="fill_parent">
                <TextView android:textStyle="bold" android:textColor="@drawable/title_color" android:id="@id/lbl_incidents_dec" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/incident_description" />
                <EditText android:gravity="top" android:id="@id/incident_desc" android:scrollbars="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:lines="5" android:singleLine="false" android:autoText="true" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:padding="15.0px" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <Button android:textStyle="bold" android:id="@id/btnPicture" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/btn_add_photo" />
                <ImageView android:id="@id/sel_photo_prev" android:layout_width="wrap_content" android:layout_height="wrap_content" android:scaleType="centerCrop" android:adjustViewBounds="true" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>